--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: james.allen.1248@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Assorted data analysis and programming projects.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "jlln.github.io" # the base hostname & protocol for your site
 twitter_username: 
 github_username:  jlln
 stackoverflow_username: jlln
